clusters/main/kubernetes/flux-system/capacitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: le-prod
    cert-manager.io/private-key-rotation-policy: Always
    # add auth
    nginx.ingress.kubernetes.io/auth-method: "GET"
    nginx.ingress.kubernetes.io/auth-url: "http://${AUTHELIA_INTERNAL_DNS}/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.${DOMAIN_0}?rm=$request_method"
    nginx.ingress.kubernetes.io/auth-response-headers: "Remote-User,Remote-Name,Remote-Groups,Remote-Email"
    # homepage integration
    gethomepage.dev/description: A general purpose UI for FluxCD.
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/href: https://capacitor.${DOMAIN_0}/
    gethomepage.dev/icon: https://raw.githubusercontent.com/gimlet-io/capacitor/7a6819362517334b73a34253358875d8d55031e3/docs/favicon.svg
    gethomepage.dev/name: Capacitor
    gethomepage.dev/pod-selector: app.kubernetes.io/instance=capacitor
spec:
  ingressClassName: "external"
  rules:
    - host: capacitor.${DOMAIN_0}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: capacitor
                port:
                  number: 80
  tls:
    - hosts:
        - capacitor.${DOMAIN_0}
      secretName: flux-system-capacitor
